reformatted code to use 4 tabs across the whole project